add auth methods in openapi
