# api-gateway/api/openapi-spec.yaml
@@ -14,6 +14,60 @@ tags:
   - name: employee
     description: Operations available to regular employees
 paths:
+  /auth/sign-in:
+    post:
+      summary: Залогиниться в системе
+      operationId: signIn
+      requestBody:
+        description: Данные для входа
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/AuthSignIn"
+      responses:
+        200:
+          description: Пользователь успешно залогинился
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/OkResult"
+        400:
+          description: Некорректный запрос
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/BadRequestError"
+        404:
+          description: Пользователь не найден
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/NotFoundError"
+
+  /auth/sign-up:
+    post:
+      summary: Зарегистрироваться в системе
+      operationId: signUp
+      requestBody:
+        description: Данные регистрации
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/AuthSignUp"
+      responses:
+        200:
+          description: Пользователь успешно зарегистировался
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/OkResult"
+        400:
+          description: Некорректный запрос
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/BadRequestError"
+
   /v1/tasks:
     get:
       tags:
@@ -365,6 +419,34 @@ components:
       bearerFormat: JWT
 
   schemas:
+    AuthSignIn:
+      type: object
+      properties:
+        login:
+          type: string
+        password:
+          type: string
+      required:
+        - login
+        - password
+
+    AuthSignUp:
+      type: object
+      properties:
+        login:
+          type: string
+        password:
+          type: string
+        role:
+          type: string
+          enum:
+            - developer
+            - manager
+            - accountant
+      required:
+        - login
+        - password
+
     ListTasksResult:
       type: object
       properties:
@@ -584,6 +666,19 @@ components:
         - error
 
     ForbiddenError:
+      type: object
+      properties:
+        error:
+          type: object
+          properties:
+            reason:
+              type: string
+          required:
+            - reason
+      required:
+        - error
+
+    NotFoundError:
       type: object
       properties:
         error:
